--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ hr {
         display: flex;
         align-items: center;
         justify-self: center;
-        width: 55%;
+        width: 45rem;
         margin: 5rem 0;
         border-radius: 1rem;
     }
